response fix in tag controller
