# app/Http/Controllers/TagController.php
@@ -49,9 +49,18 @@ class TagController extends Controller
     {
         $questions = $tag->questions;
         foreach($questions as $question) {
+            $question->tags;
+            
+            $options = $question->QuestionOption;
+            foreach($options as $opt) {
+                $optionDetails = $opt->option;
+                $opt['value'] = $optionDetails->value;
+                $opt['type'] = $optionDetails->type;
+            }
             $instructor = DB::table('users')->where(['id' => $question->instructor_id])->get()->first();
             $instructorName = $instructor->firstName . ' ' . $instructor->lastName;
             $question['instructorName'] = $instructorName;
+            $question['options'] = $options;
         }
 
         return response()->json(['message' => 'Successfully fetched questions!', 'questions' => $questions]);
