# public/swagger/swagger.yaml
@@ -78,6 +78,16 @@ paths:
                           instructorName:
                             type: String
                             example: "Haidy Elnahass"
+                          options:
+                            type: array
+                            items:
+                              properties:
+                                value:
+                                  type: String
+                                  example: "answer 1"
+                                "type":
+                                  type: String
+                                  example: "mcq"
           "401":
             description: Unauthenticated
           "403":
@@ -880,10 +890,35 @@ paths:
             application/json:
               schema:
                 properties:
-                  Questions:
+                  questions:
                     type: array
                     items:
-                      "$ref": "#/components/schemas/Question"
+                      properties:
+                        id:
+                          type: int
+                          example: 1
+                        questionText:
+                          type: string
+                          example: "Science"
+                        isHidden:
+                          type: boolean
+                          example: true
+                        instructor_id:
+                          type: int
+                          example: 1
+                        instructorName:
+                          type: String
+                          example: "Haidy Elnahass"
+                        options:
+                          type: array
+                          items:
+                            properties:
+                              value:
+                                type: String
+                                example: "answer 1"
+                              "type":
+                                type: String
+                                example: "mcq"
                 type: object
         "401":
           description: Unauthenticated
